--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,12 @@
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/XEPDB1?useSSL=false&amp;serverTimezone=UTC
-spring.datasource.username=crme059
+#Oracle
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/XEPDB1?useSSL=false&amp;serverTimezone=UTC
+#spring.datasource.username=crme059
+#spring.datasource.password=root
+#MySQL
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/crme059
+spring.datasource.username=root
 spring.datasource.password=root
+server.port=1666
+spring.sql.init.mode=always
